NRZ-I/.metadata/.plugins/org.eclipse.cdt.ui/SPI_Master.build.log
12:12:59 **** Incremental Build of configuration Debug for project SPI_Master ****
"C:\\Users\\12302093\\ModusToolbox\\tools_3.4\\modus-shell\\bin\\make" CY_MAKE_IDE=eclipse CY_IDE_TOOLS_DIR=C:/Users/12302093/ModusToolbox/tools_3.4 CY_IDE_BT_TOOLS_DIR= -j12 build_proj 
Tools Directory: C:/Users/12302093/ModusToolbox/tools_3.4
Searching installed tools in progress...
Searching installed tools complete
INFO: Multiple tools versions were found in "/cygdrive/c/Users/12302093/ModusToolbox/tools_3.1 /cygdrive/c/Users/12302093/ModusToolbox/tools_3.2 /cygdrive/c/Users/12302093/ModusToolbox/tools_3.3 /cygdrive/c/Users/12302093/ModusToolbox/tools_3.4 C:/Users/12302093/ModusToolbox/tools_3.1 C:/Users/12302093/ModusToolbox/tools_3.2 C:/Users/12302093/ModusToolbox/tools_3.3 C:/Users/12302093/ModusToolbox/tools_3.4". This build is currently using "C:/Users/12302093/ModusToolbox/tools_3.4". Check that this is the correct version that should be used in this build. To stop seeing this message, set the CY_TOOLS_PATHS environment variable to the location of the tools directory. This can be done either as an environment variable or set in the application Makefile.
NOTE: Using 'C:/Users/12302093/ModusToolbox/tools_3.4/ninja/ninja.exe' from PATH.
Generating mtbninja data files...
Generating mtbninja data complete...
Toolchain validation: PASS
Initializing build: mtb-example-empty-app Debug APP_CY8CPROTO-062-4343W GCC_ARM

Prebuild operations complete
# 0: Loading the application in directory 'C:/Users/12302093/DigitaleCommunicatie/SPI_Master'
# 0: Loading the ModusToolbox Technology Packs and Early Access Packs
# 0: Loading the tools information
[1/2] Building object file C:/Users/12302093/DigitaleCommunicatie/SPI_Master/build/Debug/local/main.o
FAILED: C:/Users/12302093/DigitaleCommunicatie/SPI_Master/build/Debug/local/main.o 
C:/Users/12302093/ModusToolbox/tools_3.4/gcc/bin/arm-none-eabi-gcc.exe -c -mcpu=cortex-m4 --specs=nano.specs -Og -mfloat-abi=softfp -mfpu=fpv4-sp-d16 -mthumb -ffunction-sections -fdata-sections -ffat-lto-objects -g -Wall -pipe -MMD -MP -MF C:/Users/12302093/DigitaleCommunicatie/SPI_Master/build/Debug/local/main.o.d -MT C:/Users/12302093/DigitaleCommunicatie/SPI_Master/build/Debug/local/main.o @C:/Users/12302093/DigitaleCommunicatie/SPI_Master/build/Debug/local/main.o.rsp -o C:/Users/12302093/DigitaleCommunicatie/SPI_Master/build/Debug/local/main.o -c C:/Users/12302093/DigitaleCommunicatie/SPI_Master/main.c
C:/Users/12302093/DigitaleCommunicatie/SPI_Master/main.c: In function 'main':
C:/Users/12302093/DigitaleCommunicatie/SPI_Master/main.c:26:27: error: 'CYBSP_SPI_MOSI' undeclared (first use in this function); did you mean 'CYBSP_QSPI_SS'?
   26 |     cyhal_spi_init(&mSPI, CYBSP_SPI_MOSI, CYBSP_SPI_MISO, CYBSP_SPI_CLK, CYBSP_SPI_CS, NULL, 8, CYHAL_SPI_MODE_00_MSB, false);
      |                           ^~~~~~~~~~~~~~
      |                           CYBSP_QSPI_SS
C:/Users/12302093/DigitaleCommunicatie/SPI_Master/main.c:26:27: note: each undeclared identifier is reported only once for each function it appears in
make: *** [../mtb_shared/core-make/release-v3.7.0/make/core/ninja.mk:234: C:/Users/12302093/DigitaleCommunicatie/SPI_Master/build/APP_CY8CPROTO-062-4343W/Debug/mtb-example-empty-app.elf] Error 1
C:/Users/12302093/DigitaleCommunicatie/SPI_Master/main.c:26:43: error: 'CYBSP_SPI_MISO' undeclared (first use in this function); did you mean 'CYBSP_QSPI_SS'?
   26 |     cyhal_spi_init(&mSPI, CYBSP_SPI_MOSI, CYBSP_SPI_MISO, CYBSP_SPI_CLK, CYBSP_SPI_CS, NULL, 8, CYHAL_SPI_MODE_00_MSB, false);
      |                                           ^~~~~~~~~~~~~~
      |                                           CYBSP_QSPI_SS
C:/Users/12302093/DigitaleCommunicatie/SPI_Master/main.c:26:59: error: 'CYBSP_SPI_CLK' undeclared (first use in this function); did you mean 'CYBSP_SDHC_CLK'?
   26 |     cyhal_spi_init(&mSPI, CYBSP_SPI_MOSI, CYBSP_SPI_MISO, CYBSP_SPI_CLK, CYBSP_SPI_CS, NULL, 8, CYHAL_SPI_MODE_00_MSB, false);
      |                                                           ^~~~~~~~~~~~~
      |                                                           CYBSP_SDHC_CLK
C:/Users/12302093/DigitaleCommunicatie/SPI_Master/main.c:26:74: error: 'CYBSP_SPI_CS' undeclared (first use in this function); did you mean 'CYBSP_QSPI_SS'?
   26 |     cyhal_spi_init(&mSPI, CYBSP_SPI_MOSI, CYBSP_SPI_MISO, CYBSP_SPI_CLK, CYBSP_SPI_CS, NULL, 8, CYHAL_SPI_MODE_00_MSB, false);
      |                                                                          ^~~~~~~~~~~~
      |                                                                          CYBSP_QSPI_SS
ninja: build stopped: subcommand failed.
"C:/Users/12302093/ModusToolbox/tools_3.4/modus-shell/bin/make CY_MAKE_IDE=eclipse CY_IDE_TOOLS_DIR=C:/Users/12302093/ModusToolbox/tools_3.4 CY_IDE_BT_TOOLS_DIR= -j12 build_proj" terminated with exit code 2. Build might be incomplete.

12:13:02 Build Failed. 5 errors, 0 warnings. (took 3s.428ms)

